force-app/main/default/objects/Software_Download__c/Software_Download__c.object-meta.xml
<CustomObject>
    <description>Software Download object to store data from Software Download Audit records</description>
    <label>Software Download</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Software Downloads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>