force-app/main/default/objects/Software_Download__c/fields/Company_Name_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name_Account_Name__c</fullName>
    <description>formula field return Account /Company name Depends On related Lead/Contact, If company blank then refer Company name local, If blank in both case then blank</description>
    <formula>if( Contact_Full_Name__c &lt;&gt; null,if( Contact_Full_Name__r.AccountId &lt;&gt;null,  Contact_Full_Name__r.Account.Name , Contact_Full_Name__r.Company_Local__c ),if( Lead_Full_Name__r.Company&lt;&gt;null,Lead_Full_Name__r.Company, Lead_Full_Name__r.CompanyLocal  ))</formula>
    <label>Company Name / Account Name</label>
    <type>Text</type>
</CustomField>