force-app/main/default/objects/Software_Download__c/fields/Contact_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Full_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relationship To Contact</description>
    <label>Contact Full Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Software Downloads</relationshipLabel>
    <relationshipName>Software_Downloads</relationshipName>
    <type>Lookup</type>
</CustomField>