force-app/main/default/objects/Software_Download__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Country of matching lead/contact . if no matching record found pull from API</description>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>