force-app/main/default/objects/Software_Download__c/fields/Download_Date__c.field-meta.xml
<CustomField>
    <fullName>Download_Date__c</fullName>
    <description>Integration Field, Data populated from Software Download</description>
    <label>Download Date</label>
    <type>DateTime</type>
</CustomField>