force-app/main/default/objects/Software_Download__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <description>Integration Field, Data populated from Software Download</description>
    <label>Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>