force-app/main/default/objects/Software_Download__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>First name of matching lead/contact . if no matching record found pull from API</description>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>