force-app/main/default/objects/Software_Download__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Last name of matching lead/contact . if no matching record found pull from API</description>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>