force-app/main/default/objects/Software_Download__c/fields/Lead_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Full_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relationship to lead</description>
    <label>Lead Full Name</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Software Downloads</relationshipLabel>
    <relationshipName>Software_Downloads</relationshipName>
    <type>Lookup</type>
</CustomField>